--- a/WireMockExample/RegisterUsers.Core/RegisterUsers.Core.csproj
+++ b/WireMockExample/RegisterUsers.Core/RegisterUsers.Core.csproj
@@ -7,6 +7,8 @@
     <ItemGroup>
       <PackageReference Include="MongoDB.Bson" Version="2.11.4" />
       <PackageReference Include="MongoDB.Driver" Version="2.11.4" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Octokit" Version="0.50.0" />
     </ItemGroup>
 
 </Project>
