--- a/WireMockExample/RegisterUsers.WebApi/RegisterUsers.WebApi.csproj
+++ b/WireMockExample/RegisterUsers.WebApi/RegisterUsers.WebApi.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="WireMock.Net" Version="1.4.9" />
     </ItemGroup>
 
     <ItemGroup>
